fixed alignment of export link

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -84,7 +84,7 @@ header a {
   font-weight: 500;
   text-decoration: none;
   position: relative;
-  padding: 5px 10px;
+  padding: 5px 0px;
   transition: color 0.6s;
 }
 
